small css fixed and started on the links to drinks

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+
+
 .App {
   text-align: center;
+}
+body{
+  text-align: center;
+}
+.drinkDiv{
+  display: block;
+}
+.links{
+  display: block;
 }
 
 .App-logo {
